--- a/style.css
+++ b/style.css
@@ -268,10 +268,16 @@ margin-left: 40px;
 }
 
 #tanktext p::before {
-	content: url(./Ativos/Bullet.svg);
-	margin-top: 30px;
-	padding-right: 30px;
-	vertical-align: -20%;
+	display: inline-flex;
+	content: "";
+	background-image: url("./Ativos/Bullet.svg");
+	background-repeat: no-repeat;
+	background-size: 30px 30px;
+	height: 30px;
+	width: 30px;
+	margin-top: 0;
+	padding-right: 0;
+	vertical-align: -8px;
 }
 
 /* TANK SERVICES */
@@ -392,10 +398,16 @@ margin-left: 40px;
 }
 
 #wastetext p::before {
-	content: url(./Ativos/Bullet.svg);
-	margin-top: 30px;
-	padding-right: 30px;
-	vertical-align: -20%;
+	display: inline-flex;
+	content: "";
+	background-image: url("./Ativos/Bullet.svg");
+	background-repeat: no-repeat;
+	background-size: 30px 30px;
+	height: 30px;
+	width: 30px;
+	margin-top: 0;
+	padding-right: 0;
+	vertical-align: -8px;
 }
 
 
@@ -851,11 +863,16 @@ footer {
 	}
 
 	#tanktext p::before {
-		display: inline-block;
+		display: inline-flex;
+		content: "";
+		background-image: url("./Ativos/Bullet.svg");
+		background-repeat: no-repeat;
+		background-size: 30px 30px;
+		height: 30px;
 		width: 30px;
-        height: 20px;
-		padding-right: 5px !important;
-    	vertical-align: -40% !important;
+		margin-top: 0;
+		padding-right: 0;
+		vertical-align: -8px;
 	}
 
 	/* TANK SERVICES */
@@ -889,11 +906,16 @@ footer {
 	}
 
 	#transpotext p::before {
-		display: inline-block;
+		display: inline-flex;
+		content: "";
+		background-image: url("./Ativos/Bullet.svg");
+		background-repeat: no-repeat;
+		background-size: 30px 30px;
+		height: 30px;
 		width: 30px;
-        height: 20px;
-		padding-right: 5px !important;
-    	vertical-align: -40% !important;
+		margin-top: 0;
+		padding-right: 0;
+		vertical-align: -8px;
 	}
 
 	#aligntranspo {
@@ -976,11 +998,16 @@ footer {
     }
 
 	#wastetext p::before {
-		display: inline-block;
+		display: inline-flex;
+		content: "";
+		background-image: url("./Ativos/Bullet.svg");
+		background-repeat: no-repeat;
+		background-size: 30px 30px;
+		height: 30px;
 		width: 30px;
-        height: 20px;
-		padding-right: 5px !important;
-    	vertical-align: -40% !important;
+		margin-top: 0;
+		padding-right: 0;
+		vertical-align: -8px;
 	}
 
 	/* WASTE MANAGEMENT */
