--- a/style.css
+++ b/style.css
@@ -871,7 +871,7 @@ footer {
 	#tanktext p::before {
 		display: inline-flex;
 		content: "";
-		background-image: url("./Ativos/Bullet.svg");
+		background-image: url("./Ativos/Bullet01.svg");
 		background-repeat: no-repeat;
 		background-size: 20px 20px;
 		height: 20px;
@@ -914,7 +914,7 @@ footer {
 	#transpotext p::before {
 		display: inline-flex;
 		content: "";
-		background-image: url("./Ativos/Bullet.svg");
+		background-image: url("./Ativos/Bullet02.svg");
 		background-repeat: no-repeat;
 		background-size: 20px 20px;
 		height: 20px;
@@ -1006,7 +1006,7 @@ footer {
 	#wastetext p::before {
 		display: inline-flex;
 		content: "";
-		background-image: url("./Ativos/Bullet.svg");
+		background-image: url("./Ativos/Bullet01.svg");
 		background-repeat: no-repeat;
 		background-size: 20px 20px;
 		height: 20px;
