--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ margin-left: 40px;
 #tanktext p::before {
 	display: inline-flex;
 	content: "";
-	background-image: url("./Ativos/Bullet.svg");
+	background-image: url("./Ativos/Bullet01.svg");
 	background-repeat: no-repeat;
 	background-size: 30px 30px;
 	height: 30px;
@@ -327,7 +327,7 @@ margin-left: 40px;
 #transpotext p::before {
 	display: inline-flex;
 	content: "";
-	background-image: url("./Ativos/Bullet.svg");
+	background-image: url("./Ativos/Bullet02.svg");
 	background-repeat: no-repeat;
 	background-size: 30px 30px;
 	height: 30px;
@@ -406,7 +406,7 @@ margin-left: 40px;
 #wastetext p::before {
 	display: inline-flex;
 	content: "";
-	background-image: url("./Ativos/Bullet.svg");
+	background-image: url("./Ativos/Bullet01.svg");
 	background-repeat: no-repeat;
 	background-size: 30px 30px;
 	height: 30px;
