--- a/style.css
+++ b/style.css
@@ -246,6 +246,10 @@ li > a:only-child:after { content: ''; }
     height: 700px;
 	grid-column: 2 / 6;
     grid-row: 4 / 9;
+	background-image: url(./Images/img2D.png);
+    background-size: cover;
+    background-position: center;
+	background-repeat: no-repeat;
 	
 }
 
@@ -634,10 +638,13 @@ footer {
 	/* MENU MOBILE */
 	
 	.menu {
-		height: 100px;
+		height: 70px;
 		width: 100%;
 		display: flex;
 		justify-content: space-between;
+		position: fixed;
+        background: white;
+        z-index: 1000;
 	}
 
 	#logomobile {
@@ -838,13 +845,11 @@ footer {
 		margin-left: 0px;
 		border-top: solid 5px #FF7077;
         border-radius: 2px;
+		background-image: url(./Images/img2M.png);
+        background-size: cover;
+        background-position: center;
+		background-repeat: no-repeat;
 	}
-	
-
-	#tankimg img {
-        width: 100%;
-        height: 100%;
-    }
 
 	#tanktext {
         width: 100%;
