--- a/style.css
+++ b/style.css
@@ -856,6 +856,15 @@ footer {
 		background-repeat: no-repeat;
 	}
 
+	#aligntank {
+		height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: end;
+	}
+
 	#tanktext {
         width: 100%;
 		height: 300px;
@@ -867,13 +876,13 @@ footer {
 	#tanktext h1 {
 		font-size: 42px;
 		width: 90%;
-		margin: 0;
+		margin-bottom: 20px;
 	}
 
 	#tanktext p {
 		margin-left: 0;
 		width: 90% !important;
-		font-size: 11px;
+		font-size: 14px;
 		line-height: 15px;
         height: 20px;
 	}
@@ -888,7 +897,7 @@ footer {
 		width: 20px;
 		margin-top: 0;
 		padding-right: 10px;
-		vertical-align: -8px;
+		vertical-align: -5px;
 	}
 
 	/* TANK SERVICES */
@@ -917,7 +926,7 @@ footer {
 		height: 20px;
         width: 90% !important;
         margin-left: 10px;
-        font-size: 11px;
+        font-size: 14px;
         line-height: 20px;
 	}
 
@@ -931,7 +940,7 @@ footer {
 		width: 20px;
 		margin-top: 0;
 		padding-right: 10px;
-		vertical-align: -8px;
+		vertical-align: -5px;
 	}
 
 	#aligntranspo {
@@ -1009,7 +1018,7 @@ footer {
         margin-left: 20px;
         width: 90% !important;
         height: 20px;
-        font-size: 11px;
+		font-size: 14px;
         line-height: 15px;
     }
 
@@ -1023,7 +1032,7 @@ footer {
 		width: 20px;
 		margin-top: 0;
 		padding-right: 10px;
-		vertical-align: -8px;
+		vertical-align: -5px;
 	}
 
 	/* WASTE MANAGEMENT */
