--- a/style.css
+++ b/style.css
@@ -952,8 +952,12 @@ footer {
 	}
 
 	#aligntranspo {
+		display: flex;
+        flex-direction: column;
 		justify-content: center;
         align-items: baseline;
+        width: 90%;
+		height: 100%;
 	}
 
 	#transpoimg {
@@ -984,6 +988,7 @@ footer {
 		z-index: 8;
 		display: flex;
 		justify-content: center;
+		align-items: center;
 	}
 	
 	#greenback {
@@ -991,7 +996,7 @@ footer {
 		background-size: cover;
 		background-position: center;
 		width: 100%;
-		height: 100px;
+		height: 200px;
 		
 	}
 
@@ -1027,7 +1032,7 @@ footer {
 	#wastetext h1 {
 		width: 90%;
         text-align: left;
-        height: 100px;
+		height: 80px;
         font-size: 32px;
         line-height: 40px;
 		margin-bottom: 0;
