--- a/style.css
+++ b/style.css
@@ -548,16 +548,15 @@ footer {
 }
 
 #flogo {
+	background-image: url("./Images/logohorizontal.svg");
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
 	width: 100%;
     height: 80px;
     align-items: center;
     display: flex;
     justify-content: center;
-}
-
-#flogo img {
-	width: 300px;
-    height: 80px;
 }
 
 #infos {
@@ -1179,14 +1178,16 @@ footer {
 }
 
 #flogo {
+	background-image: url("./Images/logovertical.svg");
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	width: 100%;
+	height: 100%;
 	grid-column: 1;
 	grid-row: 1;
 }
 
-#flogo img {
-	width: 220px;
-    height: 60px;
-}
 
 #infos {
     text-align: center;
