--- a/style.css
+++ b/style.css
@@ -1015,8 +1015,8 @@ footer {
         width: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: center;
-		align-items: baseline;
+        justify-content: start;
+        align-items: center;
 	}
 
 	#wastetext {
@@ -1038,10 +1038,10 @@ footer {
 	}
 
 	#wastetext p {
-        margin-left: 20px;
-        width: 90% !important;
-		height: 10px;
-		font-size: 14px;
+		margin-left: 10px;
+        width: 95% !important;
+        height: 10px;
+        font-size: 13px;
         line-height: 15px;
     }
 
