--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ p {
 }
 
 
-@media only screen and (min-width: 1366px) {
+@media only screen and (min-width: 100px) and (max-width: 1920px) {
 
 /* HEADER SUBNAV WITH DROPDOWN */
 
@@ -758,7 +758,7 @@ footer {
 
 
 /* MOBILE ALL */
-@media only screen and (min-width:100px) and (max-width: 1365px) and (max-height: 1000px) {
+@media only screen and (min-width:100px) and (max-width: 1200px) and (max-height: 1000px) {
 	
 	/* MENU MOBILE */
 	
