--- a/style.css
+++ b/style.css
@@ -457,25 +457,25 @@ margin-left: 40px;
     height: 60vh;
 }
 
+#form {
+	display: grid;
+	width: 100%;
+	grid-template-columns: repeat(6, 16.6%);
+	gap: 20px;
+}
+
 #title {
 	height: 100%;
     width: 100%;
-    grid-column: 1 / 1;
+	grid-column: 2 / 3;
     grid-row: 1;
     margin-bottom: -40px;
 	color: #56352C;
 }
 
-#form {
-	display: grid;
-	grid-template-columns: repeat(4, 300px);
-    gap: 25px;
-	
-}
-
 #fname {
 	height: 60px;
-	grid-column: 1 / 1;
+	grid-column: 2 / 3;
     grid-row: 2 / 2;
 	background-color: transparent;
     border: 2px solid #F6FAC5;
@@ -484,7 +484,7 @@ margin-left: 40px;
 
 #lname {
 	height: 60px;
-	grid-column: 2 / 2;
+	grid-column: 3 / 4;
     grid-row: 2 / 2;
 	background-color: transparent;
     border: 2px solid #F6FAC5;
@@ -493,7 +493,7 @@ margin-left: 40px;
 
 #email {
 	height: 60px;
-	grid-column: 1 / 3;
+	grid-column: 2 / 4;
     grid-row: 3 / 3;
 	background-color: transparent;
 	border: 2px solid #F6FAC5;
@@ -502,7 +502,7 @@ margin-left: 40px;
 
 #phone {
 	height: 60px;
-	grid-column: 1 / 3;
+	grid-column: 2 / 4;
     grid-row: 4 / 4;
 	background-color: transparent;
 	border: 2px solid #F6FAC5;
@@ -511,28 +511,27 @@ margin-left: 40px;
 
 #textarea {
 	width: 620px;
-	grid-column: 3 / 4;
+	grid-column: 4 / 6;
     grid-row: 2 / 5;
 	background-color: transparent;
 	border: 2px solid #F6FAC5;
-	padding-left: 30px;
 	padding-top: 20px;
 }
 
 #btn {
-	grid-column: 4 / 4;
+	grid-column: 5 / 5;
 	grid-row: 5 / 5;
 	background-color: transparent;
 	border: 2px solid #F6FAC5;
 	height: 40px;
-    width: 100%;
-    margin-left: 30px;
-	
+	width: 100%;
+	margin-left: 9px;
 }
 
 ::placeholder, #btn {
 	font-family: EthosNova-Regular;
 	color: #F6FAC5;
+	padding-left: 30px;
 }
 
 /* FOOTER */
