--- a/style.css
+++ b/style.css
@@ -467,7 +467,7 @@ margin-left: 40px;
 #title {
 	height: 100%;
     width: 100%;
-	grid-column: 2 / 3;
+	grid-column: 2 / 4;
     grid-row: 1;
     margin-bottom: -40px;
 	color: #56352C;
@@ -506,7 +506,7 @@ margin-left: 40px;
 }
 
 #textarea {
-	width: 620px;
+	width: 100%;
 	grid-column: 4 / 6;
     grid-row: 2 / 5;
 	background-color: transparent;
@@ -624,7 +624,7 @@ footer {
 
 /* NOTEBOOKS */
 
-@media only screen and (min-width:1080px) and (max-width: 1900px) {
+@media only screen and (min-width:1100px) and (max-width: 1900px) {
 	
 	/* BANNER */
 
@@ -740,15 +740,21 @@ footer {
 
 
 /* MENU MOBILE VARIANTS HEIGHT */
-@media only screen and (min-height:100px) and (max-height:680px) {
+@media only screen and (min-height:100px) and (max-height:600px) {
 	.show {
         margin-top: 70vh !important;
     }
 }
 
-@media only screen and (min-height:700px) and (max-height:1080px) {
+@media only screen and (min-width:600px) and (max-width:1080px) and (min-height:600px) and (max-height:1080px) {
 	.show {
         margin-top: 55vh !important;
+    }
+}
+
+@media only screen and (min-width:600px) and (max-width:1080px) {
+	.banner #titlehome {
+        width: 50% !important;
     }
 }
 
@@ -756,7 +762,7 @@ footer {
 
 
 /* MOBILE ALL */
-@media only screen and (min-width:100px) and (max-width: 1080px) and (max-height: 1366px) {
+@media only screen and (min-width:100px) and (max-width: 1200px) and (max-height: 1366px) {
 	
 	/* MENU MOBILE */
 	
