--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ p {
 }
 
 
-@media only screen and (min-width: 100px) and (max-width: 1920px) {
+@media only screen and (min-width: 100px) and (max-width: 4000px) {
 
 /* HEADER SUBNAV WITH DROPDOWN */
 
@@ -142,8 +142,7 @@ nav ul ul ul li {
 	left:170px;
 }
 
-li > a:after { content:  ' +'; }
-li > a:only-child:after { content: ''; }
+
 
 .dropdown {
 	display: none;
@@ -558,21 +557,20 @@ footer {
     justify-content: center;
 }
 
-#infos {
+#infolocation, #infotext {
 	font-family: EthosNova-regular;
 	text-align: center;
 	color: #22450A;
 }
 
-#infos h2 {
-	font-size: 28px;
+#infolocation h2 {
+	font-size: 22px;
+}
+
+#infotext h2 {
 	font-family: EthosNova-heavy;
 }
 
-#social {
-	text-align: center;
-    width: 80%;
-}
 
 /* FOOTER */
 
@@ -627,6 +625,10 @@ footer {
 @media only screen and (min-width:1100px) and (max-width: 1900px) {
 	
 	/* BANNER */
+
+	.banner {
+        height: 110vh;
+    }
 
 	#titlehome h1 {
         line-height: 50px;
@@ -738,31 +740,260 @@ footer {
 
 /* NOTEBOOKS */
 
+/* NOTEBOOK SMALL */
+@media only screen and (min-width:1100px) and (max-width:1200px) {
+	#titlehome h1 {
+        line-height: 40px;
+        font-size: 45px;
+    }
+
+	.grid {
+        grid-template-rows: repeat(23, 110px);
+    }
+
+	#ourservice {
+        width: 100%;
+        grid-column: 2 / 6;
+    }
+
+	#ourservice h1 {
+		font-size: 50px;
+	}
+
+	/* TANK SERVICES */
+	#tankimg {
+        width: 100%;
+        height: 100%;
+        grid-row: 4 / 8;
+        grid-column: 2 / 6;
+    }
+
+	#tanktext {
+        height: 100%;
+        width: 100%;
+        grid-column: 7 / 11;
+        grid-row: 4 / 7;
+    }
+
+	#tanktext h1 {
+        font-size: 50px;
+    }
+
+	#tanktext p {
+        margin-left: 0px;
+    }
+	/* TANK SERVICES */
+
+	/* TRANSPORTATION */
+	#transpoborder {
+        grid-row: 9 / 16;
+    }
+
+	#box {
+        width: 100%;
+        height: 100%;
+        grid-row: 9 / 14;
+        grid-column: 3 / 7;
+    }
+
+	#transpotext h1 {
+        font-size: 40px;
+        line-height: 50px;
+    }
+
+	#transpotext p {
+        font-size: 15px;
+        line-height: 23px;
+    }
+
+	#transpoimg {
+        height: 100%;
+        width: 100%;
+        grid-row: 8 / 15;
+        margin-top: 50px;
+        margin-left: 0px;
+    }
+
+	/* TRANSPORTATION */
+
+	#aligngreen {
+        height: 350px;
+        width: 100%;
+        grid-column: 1 / 11;
+        grid-row: 15 / 20;
+        margin-top: -40px;
+    }
+
+	/* WASTE MANAGEMENT */
+
+	
+
+	#wasteimg {
+        width: 100%;
+        height: 100%;
+        grid-column: 2 / 6;
+        grid-row: 16 / 21;
+        margin-top: 0;
+    }
+
+	#wastetext {
+        height: 100%;
+        margin-top: 0;
+		grid-column: 7 / 11;
+        grid-row: 17 / 21;
+        margin-left: 0;
+    }
+
+	#wastetext h1 {
+        width: 100%;
+        font-size: 45px;
+    }
+
+	#wastetext p {
+        margin-left: 0;
+        height: 20px;
+    }
+
+	#alignwaste {
+		display: flex;
+    	flex-direction: column;
+    	justify-content: center;
+	}
+
+	/* WASTE MANAGEMENT */
+
+	#banner {
+        grid-row: 21 / 24;
+    }
+	/* NOTEBOOK SMALL */
+}
 
 /* MENU MOBILE VARIANTS HEIGHT */
-@media only screen and (min-height:100px) and (max-height:600px) {
+@media only screen and (min-height:100px) and (max-height:680px) {
 	.show {
         margin-top: 70vh !important;
     }
 }
 
-@media only screen and (min-width:600px) and (max-width:1080px) and (min-height:600px) and (max-height:1080px) {
+@media only screen and (min-height:680px) and (max-height:1080px) {
 	.show {
         margin-top: 55vh !important;
     }
 }
+/* MENU MOBILE VARIANTS HEIGHT */
 
-@media only screen and (min-width:600px) and (max-width:1080px) {
+/* IPAD AND TABLET */
+@media only screen and (min-width:600px) and (max-width:1080px) and (max-height: 1200px) {
+	.show {
+		margin-top: 48vh !important;
+	}
+	
 	.banner #titlehome {
         width: 50% !important;
+        height: 50% !important;
     }
+
+	#titlehome h1 {
+        font-size: 55px !important;
+        line-height: 45px !important;
+    }
+
+#ourservice h1 {
+	font-size: 55px !important;
 }
 
-/* MENU MOBILE VARIANTS HEIGHT */
+#ourservice h2 {
+	font-size: 23px !important;
+}
+
+
+#tanktext h1 {
+	font-size: 55px !important;
+}
+
+#tanktext p {
+	font-size: 23px !important;
+}
+
+
+}
+
+@media only screen and (min-width:1024px) and (max-width:1100px) and (max-height: 1366px) {
+	#logomobile img {
+        width: 35% !important;
+    }
+	
+	.show {
+		margin-top: 58vh !important;
+	}
+
+	.banner #titlehome {
+        width: 40% !important;
+        height: 50% !important;
+        margin: 0 0 40px 16px !important;
+    }
+
+	#titlehome h1 {
+        font-size: 50px !important;
+        line-height: 45px !important;
+    }
+
+	#titlehome p {
+        font-size: 20px !important;
+        line-height: 20px !important;
+    }
+
+	#ourservice h1 {
+        font-size: 50px !important;
+        line-height: 40px !important;
+    }
+
+	#ourservice h2 {
+        font-size: 25px !important;
+    }
+
+	#aligntank h1 {
+		font-size: 50px !important;
+        line-height: 40px !important;
+	}
+
+	#aligntank p {
+		font-size: 25px !important;
+	}
+
+    #transpotext h1 {
+        font-size: 50px !important;
+        line-height: 40px !important;
+    }
+
+	#transpotext p {
+		font-size: 25px !important;
+	}
+
+	#aligntranspo {
+        justify-content: flex-start !important;
+    }
+
+	#alignwaste h1 {
+        font-size: 50px !important;
+        line-height: 40px !important;
+    }
+
+	#alignwaste p {
+		font-size: 20px !important;
+		margin-left: 0px;
+		width: 95% !important;
+	}
+}
+
+
+/* IPAD AND TABLET */
+
+
 
 
 /* MOBILE ALL */
-@media only screen and (min-width:100px) and (max-width: 1200px) and (max-height: 1366px) {
+@media only screen and (min-width:100px) and (max-width: 1100px) and (max-height: 1366px) {
 	
 	/* MENU MOBILE */
 	
