--- a/style.css
+++ b/style.css
@@ -898,27 +898,60 @@ footer {
         line-height: 45px !important;
     }
 
-#ourservice h1 {
-	font-size: 55px !important;
+
+	.grid {
+        grid-template-rows: repeat(14, 250px);
+    }
+
+	#ourservice {
+        grid-row: 1 / 2;
+    }
+
+
+	#ourservice h1 {
+		font-size: 55px !important;
+	}
+
+	#ourservice h2 {
+		font-size: 23px !important;
+	}
+
+	#tanktext {
+        grid-row: 2 / 4;
+    }
+
+	#tankimg {
+        grid-row: 4 / 6;
+    }
+
+	#tanktext h1 {
+		font-size: 55px !important;
+	}
+
+	#tanktext p {
+		font-size: 23px !important;
+	}
+
+	#box {
+        grid-row: 6 / 8;
+    }
+
+	#transpoimg {
+        grid-row: 8 / 10;
+    }
+
+	#wastetext {
+        grid-row: 10 / 12;
+        height: 100% !important;
+    }
+
+	#wasteimg {
+        grid-row: 12 / 14;
+    }
 }
 
-#ourservice h2 {
-	font-size: 23px !important;
-}
-
-
-#tanktext h1 {
-	font-size: 55px !important;
-}
-
-#tanktext p {
-	font-size: 23px !important;
-}
-
-
-}
-
-@media only screen and (min-width:1024px) and (max-width:1100px) and (max-height: 1366px) {
+/* IPAD AND TABLET */
+@media only screen and (min-width:800px) and (max-width:1100px) and (max-height: 1366px) {
 	#logomobile img {
         width: 35% !important;
     }
@@ -951,6 +984,7 @@ footer {
 	#ourservice h2 {
         font-size: 25px !important;
     }
+
 
 	#aligntank h1 {
 		font-size: 50px !important;
@@ -992,7 +1026,7 @@ footer {
 
 
 
-/* MOBILE ALL */
+/* ---------------------------------- MOBILE ALL ------------------------------------------*/
 @media only screen and (min-width:100px) and (max-width: 1100px) and (max-height: 1366px) {
 	
 	/* MENU MOBILE */
@@ -1169,7 +1203,7 @@ footer {
 		width: 100%;
 		display: grid;
 		grid-template-columns: repeat(1, 100%);
-		grid-template-rows: repeat(13, 300px);
+		grid-template-rows: repeat(11, 250px);
 		gap: 0px;
 		row-gap: 0px;
 	}
@@ -1178,17 +1212,17 @@ footer {
 
 	#ourservice {
         width: 100%;
-        height: 300px;
+        height: 100%;
         line-height: 25px;
         direction: ltr;
         grid-column: 1 / 1;
         grid-row: 1 / 2;
         display: flex;
         flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		text-align: left;
-	}
+        align-items: center;
+        justify-content: center;
+        text-align: left;
+    }
 
 	#ourservice h1 {
 		font-size: 46px;
@@ -1205,9 +1239,9 @@ footer {
 	
 	#tankimg {
 		width: 100%;
-		height: 600px;
-		grid-column: 1;
-		grid-row: 3 / 4;
+        height: 100%;
+        grid-column: 1;
+        grid-row: 3 / 5;
 		margin-top: 0;
 		margin-left: 0px;
 		border-top: solid 5px #FF7077;
@@ -1225,14 +1259,15 @@ footer {
         flex-direction: column;
         justify-content: center;
         align-items: end;
+		line-height: 10px;
 	}
 
 	#tanktext {
         width: 100%;
-		height: 300px;
+        height: 100%;
         grid-column: 1 / 1;
-        grid-row: 2 / 2;
-		border: none;
+        grid-row: 2 / 3;
+        border: none;
     }
 
 	#tanktext h1 {
@@ -1246,7 +1281,7 @@ footer {
 		width: 95% !important;
         font-size: 13px;
 		line-height: 15px;
-        height: 20px;
+        height: 15px;
 	}
 
 	#tanktext p::before {
@@ -1268,15 +1303,11 @@ footer {
 
 	#box {
         width: 100%;
-        height: 600px;
+        height: 100%;
         grid-column: 1;
         grid-row: 5 / 7;
         margin-top: 0;
     }
-
-	#transpotext {
-		height: 500px;
-	}
 
 	#transpotext h1 {
 		margin-left: 0;
@@ -1315,10 +1346,10 @@ footer {
 	}
 
 	#transpoimg {
-        height: 600px;
+        height: 100%;
         width: 100%;
         grid-column: 1;
-		grid-row: 7 / 8;
+        grid-row: 7 / 9;
         margin-top: 0;
 		border-top: solid 5px #71C920;
 		border-radius: 2px;
@@ -1336,15 +1367,7 @@ footer {
 	/* TRANSPORTATION */
 
 	#aligngreen {
-		height: 300px;
-		grid-column: 1 / 1;
-		grid-row: 12 / 12;
-        width: 100%;
-		position: relative;
-		z-index: 8;
-		display: flex;
-		justify-content: center;
-		align-items: center;
+		display: none;
 	}
 	
 	#greenback {
@@ -1359,8 +1382,8 @@ footer {
 	/* WASTE MANAGEMENT */
 
 	#wasteimg {
-        width: 100%;
-        height: 600px;
+		width: 100%;
+        height: 100%;
         grid-column: 1;
         grid-row: 10 / 12;
         margin-left: 0;
@@ -1381,7 +1404,7 @@ footer {
 	#wastetext {
         width: 100%;
         grid-column: 1;
-        grid-row: 9 / 9;
+        grid-row: 9 / 10;
         margin-top: 0;
         height: 300px;
         border: none;
@@ -1390,8 +1413,8 @@ footer {
 	#wastetext h1 {
 		width: 90%;
         text-align: left;
-		height: 80px;
-        font-size: 32px;
+		height: 70px;
+        font-size: 30px;
         line-height: 40px;
 		margin-bottom: 0;
 	}
@@ -1399,7 +1422,7 @@ footer {
 	#wastetext p {
 		margin-left: 10px;
         width: 95% !important;
-        height: 10px;
+        height: 2px;
         font-size: 13px;
         line-height: 15px;
     }
@@ -1420,15 +1443,7 @@ footer {
 	/* WASTE MANAGEMENT */
 
 	#banner {
-		background-image: url("./Images/Banner2M.png");
-		background-size: cover;
-		background-position: center;
-		background-repeat: no-repeat;
-        width: 100%;
-        grid-column: 1;
-        grid-row: 13 / 13;
-        margin-top: 0;
-        height: 300px;
+		display: none;
     }
 
 
@@ -1534,7 +1549,7 @@ footer {
     display: grid;
 	grid-template-columns: repeat(1, 100%);
     width: 100%;
-	height: 55vh;
+	height: 100%;
 }
 
 #flogo {
@@ -1556,6 +1571,10 @@ footer {
     text-align: center;
 	grid-column: 1;
 	grid-row: 2;
+}
+
+#infolocation, #infotext {
+	padding-top: 20px;
 }
 
 #infos h2 {
