--- a/style.css
+++ b/style.css
@@ -880,6 +880,11 @@ footer {
 
 /* IPAD AND TABLET */
 @media only screen and (min-width:600px) and (max-width:1080px) and (max-height: 1200px) {
+	#logomobile img {
+        width: 35% !important;
+        height: auto !important;
+    }
+	
 	.show {
 		margin-top: 48vh !important;
 	}
@@ -905,7 +910,7 @@ footer {
 
 
 	#ourservice h1 {
-		font-size: 55px !important;
+		font-size: 46px !important;
 	}
 
 	#ourservice h2 {
@@ -921,7 +926,7 @@ footer {
     }
 
 	#tanktext h1 {
-		font-size: 55px !important;
+		font-size: 46px !important;
 	}
 
 	#tanktext p {
@@ -932,14 +937,41 @@ footer {
         grid-row: 6 / 8;
     }
 
+	#aligntranspo h1 {
+		font-size: 46px !important;
+		line-height: 40px !important;
+	}
+
+	#transpotext p {
+		font-size: 23px !important;
+        line-height: 20px !important;
+	}
+
 	#transpoimg {
         grid-row: 8 / 10;
+    }
+
+	#alignwaste {
+        width: 95% !important;
     }
 
 	#wastetext {
         grid-row: 10 / 12;
         height: 100% !important;
     }
+
+	#wastetext h1 {
+        width: 90% !important;
+        font-size: 46px !important;
+        line-height: 40px !important;
+        margin-bottom: 20px !important;
+    }
+
+	#wastetext p {
+		font-size: 23px !important;
+        line-height: 20px !important;
+		height: 15px !important;
+	}
 
 	#wasteimg {
         grid-row: 12 / 14;
@@ -983,7 +1015,7 @@ footer {
 
 
 	#aligntank h1 {
-		font-size: 50px !important;
+		font-size: 46px !important;
         line-height: 40px !important;
 	}
 
