--- a/style.css
+++ b/style.css
@@ -345,7 +345,7 @@ margin-left: 40px;
     position: relative;
     z-index: 9;
 	margin-top: 25px;
-	background-image: url("./Images/img3M.png");
+	background-image: url("./Images/img3D.png");
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -1231,7 +1231,7 @@ footer {
 		width: 100%;
 		display: grid;
 		grid-template-columns: repeat(1, 100%);
-		grid-template-rows: repeat(14, 200px);
+		grid-template-rows: repeat(13, 240px);
 		gap: 0px;
 		row-gap: 0px;
 	}
@@ -1334,7 +1334,7 @@ footer {
         width: 100%;
         height: 100%;
         grid-column: 1;
-		grid-row: 6 / 9;
+		grid-row: 6 / 8;
         margin-top: 0;
     }
 
@@ -1381,7 +1381,7 @@ footer {
         height: 100%;
         width: 100%;
         grid-column: 1;
-		grid-row: 9 / 11;
+		grid-row: 8 / 10;
         margin-top: 0;
 		border-top: solid 5px #71C920;
 		border-radius: 2px;
@@ -1417,7 +1417,7 @@ footer {
 		width: 100%;
         height: 100%;
         grid-column: 1;
-		grid-row: 13 / 15;
+		grid-row: 12 / 14;
         margin-left: 0;
         margin-top: 0;
 		border-top: solid 5px #FF7077;
@@ -1436,7 +1436,7 @@ footer {
 	#wastetext {
 		width: 100%;
         grid-column: 1;
-        grid-row: 11 / 13;
+		grid-row: 10 / 12;
         margin-top: 0;
         height: 100%;
         border: none;
@@ -1453,7 +1453,7 @@ footer {
 	#wastetext p {
 		margin-left: 10px;
         width: 95% !important;
-        height: 20px;
+		height: 30px;
         font-size: 12px;
         line-height: 20px;
     }
