--- a/style.css
+++ b/style.css
@@ -1241,7 +1241,7 @@ footer {
 	#ourservice {
         width: 100%;
         height: 100%;
-        line-height: 25px;
+        line-height: 30px;
         direction: ltr;
         grid-column: 1 / 1;
 		grid-row: 1 / 2;
@@ -1250,7 +1250,7 @@ footer {
         align-items: center;
         justify-content: center;
         text-align: left;
-		margin-top: 30px;
+		margin-top: 60px;
     }
 
 	#ourservice h1 {
@@ -1585,8 +1585,8 @@ footer {
 }
 
 #flogo {
-	background-image: url(./Images/logovertical.svg);
-	background-size: 130px 120px;
+	background-image: url(./Images/logohorizontal.svg);
+	background-size: 200px 130px;
 	background-position: center;
 	background-repeat: no-repeat;
 	width: 100%;
