--- a/style.css
+++ b/style.css
@@ -572,14 +572,14 @@ footer {
 
 /* PAGE THANKS */
 .tnks {
-	background-image: url(./Ativos/Ativo4.png);
+	background-image: url(./Images/Banner1D.png);
     background-size: cover;
 	background-repeat: no-repeat;
 	display: flex;
     flex-direction: column;
 	height: 100vh;
     width: 100%;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     margin: 0;
     padding: 0;
@@ -587,10 +587,10 @@ footer {
 
 #tnkstext {
 	height: 50%;
-	width: 50%;
+	width: 30%;
+	margin-left: 10%;
 	background-color: #FF7077;
 	display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
 	color: #22450A;
@@ -598,8 +598,49 @@ footer {
 
 #tnkstext {
 	text-decoration: none;
-    color: #22450A;
+	color: #FF7077;
+	background: #F6FAC5;
+	text-align: center;
 }
+
+#aligntnks {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-evenly;
+}
+
+#aligntnks h1 {
+	line-height: 60px;
+	width: 80%;
+}
+
+#returntohome {
+	width: 30%;
+    height: 10%;
+}
+
+#returntohome #btnreturn {
+	width: 100%;
+    height: 100%;
+}
+
+#btnreturn {
+	background: transparent;
+	font-family: EthosNova-Heavy;
+	color: #FF7077;
+	font-size: 15px;
+	border: 2px solid #FF7077;
+}
+
+#btnreturn:hover {
+	cursor: pointer;
+}
+
+
+
 /* PAGE THANKS */
 
 /* ALL RESOLUTIONS */
@@ -1628,6 +1669,19 @@ footer {
 #social img {
 	height: 35px;
 }
+
+/* PAGE THANKS */
+
+#tnkstext {
+	height: 50%;
+	width: 80%;
+	margin-left: 10%;
 }
 
+#aligntnks h1 {
+	line-height: 46px;
+	width: 80%;
+	font-size: 40px;
+}
+}
 /* MOBILE ALL */
